Expanded README.md, authorization requirement changes
